[gd_scene load_steps=8 format=3 uid="uid://b1ya4ab0jsfjo"]

[ext_resource type="Texture2D" uid="uid://c0ftbg1oy61nk" path="res://art/enemy/Flying bat.png" id="1_0s0xi"]
[ext_resource type="Script" path="res://flying_enemy.gd" id="1_n8sr8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdpih"]
size = Vector2(44, 23.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hut02"]
size = Vector2(15.8333, 22.8333)

[sub_resource type="Animation" id="Animation_dxprf"]
resource_name = "Flying"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_oucpg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xh31l"]
_data = {
"Flying": SubResource("Animation_dxprf"),
"RESET": SubResource("Animation_oucpg")
}

[node name="flying_enemy" type="CharacterBody2D"]
position = Vector2(240, 134)
scale = Vector2(1.2, 1.2)
collision_layer = 8
script = ExtResource("1_n8sr8")
metadata/_edit_group_ = true

[node name="SpriteSheet" type="Sprite2D" parent="."]
texture = ExtResource("1_0s0xi")
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.333336)
shape = SubResource("RectangleShape2D_bdpih")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.833344, 0)
shape = SubResource("RectangleShape2D_hut02")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Flying"
libraries = {
"": SubResource("AnimationLibrary_xh31l")
}

[node name="CheckLeft" type="RayCast2D" parent="."]
position = Vector2(-22, -12)
target_position = Vector2(0, 23)
collide_with_areas = true
collide_with_bodies = false

[node name="CheckRight" type="RayCast2D" parent="."]
position = Vector2(22, -12)
target_position = Vector2(0, 23)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
